force-app/main/default/objects/Subsidiary_Office__c/Subsidiary_Office__c.object-meta.xml
<CustomObject>
    <label>Subsidiary Office</label>
    <nameField>
        <label>Office Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subsidiary Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>