force-app/main/default/objects/Subsidiary_Office__c/fields/Region1__c.field-meta.xml
<CustomField>
    <fullName>Region1__c</fullName>
    <label>Region1</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Subsidiary Offices (Region1)</relationshipLabel>
    <relationshipName>Subsidiary_Offices1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>