force-app/main/default/objects/Subsidiary_Office__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Subsidiary Offices</relationshipLabel>
    <relationshipName>Subsidiary_Offices</relationshipName>
    <type>Lookup</type>
</CustomField>