force-app/main/default/objects/Subsidiary_Office__c/fields/Revenue_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contribution__c</fullName>
    <label>Revenue Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>